INP Issues (second round) for Aspose Release Pages
Fixed more INP issues for releases.aspose.com

--- a/layouts/partials/repository/pagelayout.html
+++ b/layouts/partials/repository/pagelayout.html
@@ -50,7 +50,7 @@
                     <div class="package">
                         <div class="row">
                             <div class="col-sm-1 hidden-xs hidden-sm col-docs-icon">
-                                <img class="docs-icon img-responsive" aria-hidden="true" alt="packages" src="{{.Site.BaseURL}}img/groupdocs_{{ lower (replace  (replace  .RelPermalink "/" "") "-" "_") }}-for-java.png">
+                                <img class="docs-icon img-responsive"  loading="lazy" aria-hidden="true" alt="packages" src="{{.Site.BaseURL}}img/groupdocs_{{ lower (replace  (replace  .RelPermalink "/" "") "-" "_") }}-for-java.png">
                             </div>
                             <div class="col-sm-11">
                                 <div class="docs-header">
