--- a/layouts/partials/repository/site-end-of-body-new.html
+++ b/layouts/partials/repository/site-end-of-body-new.html
@@ -1,5 +1,5 @@
 <!--Go Top -->
-<a class="backtop">&nbsp;</a>
+<a class="backtop" href="#" title="back to top">&nbsp;</a>
 
 <div id='DynabicMenuFooter'></div>
 
