--- a/layouts/partials/repository/site-manifest.html
+++ b/layouts/partials/repository/site-manifest.html
@@ -2,5 +2,5 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/res_repo/apple-touch-icon.png">
 <link rel="icon" type="image/png" href="/res_repo/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/res_repo/favicon-16x16.png" sizes="16x16">
-<link rel="mask-icon" href="/res_repo/safari-pinned-tab.svg" color="#0594cb">
+<link rel="mask-icon" href="/res_repo/safari-pinned-tab.svg" color="#055C85">
 <meta name="theme-color" content="#ffffff">
