--- a/layouts/repository/package.html
+++ b/layouts/repository/package.html
@@ -38,10 +38,10 @@
                                     {{ if $t.Page.IsTranslated }}
                                       {{$lang := print "/" $t.Language.Params.languageCode}}
                                          <img class="package-icon img-responsive" istran="{{$lang}}" farooq-id="{{$t.Parent.RelPermalink}}" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
-                                         src="/res_repo/img/aspose{{ lower (replace (replace (replace  $t.Parent.RelPermalink $lang "") "/" "_") "_java_" "-for-java") }}.png" />
+                                         src="/res_repo/img/aspose{{ lower (replace (replace (replace  $t.Parent.RelPermalink $lang "") "/" "_") "_java_" "-for-java") }}.png"  loading="lazy" />
                                     {{ else }}
                                          <img class="package-icon img-responsive" farooq-id="{{$t.Parent.RelPermalink}}" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
-                                         src="/res_repo/img/aspose{{ lower (replace (replace  $t.Parent.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />
+                                         src="/res_repo/img/aspose{{ lower (replace (replace  $t.Parent.RelPermalink "/" "_") "_java_" "-for-java") }}.png"  loading="lazy" />
                                     {{ end }}
                                     </span>
                                     <span class="title" tabindex="0">
@@ -58,34 +58,34 @@
 
                               <div class="tabs install-tabs">
                                  <ul class="nav nav-tabs" role="tablist">
-                                    <li role="presentation" class="active">
+                                    <li class="active">
                                        <a href="#package-manager" aria-expanded="true" id="package-manager-tab"
                                           class="package-manager-tab" aria-selected="true" aria-controls="package-manager"
-                                          role="tab" data-toggle="tab"
+                                           data-toggle="tab"
                                           title="Switch to tab panel which contains package installation command for Package Manager">
                                        Maven
                                        </a>
                                     </li>
-                                    <li role="presentation" class="">
+                                    <li class="">
                                        <a href="#dotnet-cli" aria-expanded="false" id="dotnet-cli-tab"
                                           class="package-manager-tab" aria-selected="false" aria-controls="dotnet-cli"
-                                          role="tab" data-toggle="tab"
+                                           data-toggle="tab"
                                           title="Switch to tab panel which contains package installation command for .NET CLI">
                                        Gradle
                                        </a>
                                     </li>
-                                    <li role="presentation" class="">
+                                    <li class="">
                                        <a href="#package-reference" aria-expanded="false" id="package-reference-tab"
                                           class="package-manager-tab" aria-selected="false" aria-controls="package-reference"
-                                          role="tab" data-toggle="tab"
+                                           data-toggle="tab"
                                           title="Switch to tab panel which contains package installation command for PackageReference">
                                        Ivy
                                        </a>
                                     </li>
-                                    <li role="presentation" class="">
+                                    <li class="">
                                        <a href="#paket-cli" aria-expanded="false" id="paket-cli-tab"
                                           class="package-manager-tab" aria-selected="false" aria-controls="paket-cli"
-                                          role="tab" data-toggle="tab"
+                                           data-toggle="tab"
                                           title="Switch to tab panel which contains package installation command for Paket CLI">
                                        Sbt
                                        </a>
@@ -164,7 +164,7 @@ implementation group: '{{ .groupId }}', name: '{{ .artifactId }}', classifier: '
 
           <div class="body-tabs">
            <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active" id="show-readme-container">
+              <li class="active" id="show-readme-container" role="presentation">
                  <a href="#readme-tab" role="tab" data-toggle="tab" id="readme-body-tab" class="body-tab"
                     aria-controls="readme-tab" aria-expanded="true" aria-selected="true">
                  <i class="fa fa-book" aria-hidden="true"></i>
@@ -190,7 +190,7 @@ implementation group: '{{ .groupId }}', name: '{{ .artifactId }}', classifier: '
               </li>
 
               <li role="presentation">
-                 <a href="#packageexplorer-tab" role="tab" data-toggle="tab" id="packageexplorer-body-tab" class="body-tab"
+                 <a href="#packageexplorer-tab"  role="tab" data-toggle="tab" id="packageexplorer-body-tab" class="body-tab"
                     aria-controls="packageexplorer-tab" aria-expanded="false" aria-selected="false">
                  <i class="fa-folder-open fa" aria-hidden="true"></i>
                  Package Explorer
