--- a/themes/downloads-common-theme/layouts/shortcodes/Common/image.html
+++ b/themes/downloads-common-theme/layouts/shortcodes/Common/image.html
@@ -1,4 +1,4 @@
 {{ $src := .Get "src" }}
 {{ $class := .Get "class" }}
 
-<img class="{{$class}}" src="{{$src}}">
+<img class="{{$class}}"  loading="lazy" src="{{$src}}">
