--- a/themes/downloads-common-theme/layouts/shortcodes/ProductListingWrapper.html
+++ b/themes/downloads-common-theme/layouts/shortcodes/ProductListingWrapper.html
@@ -14,7 +14,7 @@
                                     <div class="panel-body downloadfilebody">
                                         <div class="product">
                                             <div class="col-sm-1">
-                                                <img class="product-icon" src="{{ replaceRE "(\\s)" ""  (.Params.family_listing_page_iconurl) }}" width="48px" height="48px" alt="Aspose">
+                                                <img class="product-icon"  loading="lazy" src="{{ replaceRE "(\\s)" ""  (.Params.family_listing_page_iconurl) }}" width="48px" height="48px" alt="Aspose">
                                             </div>
                                             <div class="col-sm-11">
                                                 <h3 class="product-title"><a href="{{ .Permalink }}">{{ .Params.family_listing_page_title }}</a></h3>
@@ -32,7 +32,7 @@
                                     <div class="panel-body downloadfilebody">
                                         <div class="product">
                                             <div class="col-sm-1">
-                                                <img class="product-icon" src="{{ replaceRE "(\\s)" ""  (.Params.family_listing_page_iconurl) }}" width="48px" height="48px" alt="Aspose">
+                                                <img class="product-icon"  loading="lazy" src="{{ replaceRE "(\\s)" ""  (.Params.family_listing_page_iconurl) }}" width="48px" height="48px" alt="Aspose">
                                             </div>
                                             <div class="col-sm-11">
                                                 <h3 class="product-title"><a href="{{ .Permalink }}">{{ .Params.family_listing_page_title }}</a></h3>
