--- a/layouts/partials/repository/site-end-of-body-new.html
+++ b/layouts/partials/repository/site-end-of-body-new.html
@@ -57,11 +57,22 @@ $('.treeview-animated-items-header').click(function () {
 <!-- @am modified fix path for multilingual -->
 {{ if .Page.IsTranslated }}
 {{- partial "langswitcher.html" . -}}
- <script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu.containerize.com/scripts/engine.min.js?v=1.0.1', '{{.Language.Params.menuCode}}');</script>
+<!--OLD MENU OBSOLETE - START-->
+<!--<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu.containerize.com/scripts/engine.min.js?v=1.0.1', '{{.Language.Params.menuCode}}');</script>-->
+<!--OLD MENU OBSOLETE - END-->
+<!--NEW MENU - START-->
+<script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', 'aspose-en');</script>
+<!--NEW MENU - END-->
 {{ else}}
 {{ $dynamicmenuid :=.Site.Params.dynamicmenuid }}
- <script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu.containerize.com/scripts/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>
-{{ end }}
+<!--OLD MENU OBSOLETE - START-->
+<!-- 
+<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu.containerize.com/scripts/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>-->
+<!--OLD MENU OBSOLETE - END-->
+<!--NEW MENU - START-->
+<script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', 'aspose-en');</script>
+<!--NEW MENU - END-->
+ {{ end }}
 <!-- @am /modified fix path for multilingual -->
 
   <script src="{{ "/res_repo/js/highlight.min.js" | absURL }}"></script>
