--- a/layouts/partials/repository/site-end-of-body.html
+++ b/layouts/partials/repository/site-end-of-body.html
@@ -7,19 +7,19 @@
 <!-- @am modified fix path for multilingual -->
 {{ if .Page.IsTranslated }}
 {{- partial "langswitcher.html" . -}}
-<!--OLD MENU OBSOLETE - START--> 
-<!--<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.1', '{{.Language.Params.menuCode}}');</script>-->
-<!--OLD MENU OBSOLETE - END-->
+<!--OLD MENU OBSOLETE - START 
+<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.1', '{{.Language.Params.menuCode}}');</script>
+OLD MENU OBSOLETE - END-->
 <!--NEW MENU - START-->
-<script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', 'aspose-en');</script>
+<script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', '{{.Language.Params.menuCode}}');</script>
 <!--NEW MENU - END-->
 {{ else}}
 {{ $dynamicmenuid :=.Site.Params.dynamicmenuid }}
-<!--OLD MENU OBSOLETE - START-->
- <!--<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>-->
- <!--OLD MENU OBSOLETE - END-->
+<!--OLD MENU OBSOLETE - START
+<script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>
+ OLD MENU OBSOLETE - END-->
  <!--NEW MENU - START-->
- <script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', 'aspose-en');</script>
+ <script>(function(i, s, o, g, r, a, m) {  i['ContainerizeMenuObject'] = r;  i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)};  i[r].l = 1 * new Date();  a = s.createElement(o), m = s.getElementsByTagName(o)[0];  a.async = 1; a.src = g; m.parentNode.append(a);})(window, document, 'script', 'https://menucdn.containerize.com/core/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>
 <!--NEW MENU - END-->
 {{ end }}
 <!-- @am /modified fix path for multilingual -->
